# Image-Toolkit

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .vars  404.html  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  GEMINI.md  ImageToolkit.desktop  ImageToolkit.pro  ImageToolkit.spec  Makefile  RAM_REDUCTION_ROADMAP.md  README.md  ROADMAP.md  TAURI_IMPLEMENTATION_STATUS.md  TAURI_MIGRATION_STATUS.md  __main__.py  app.spec  asp_config.toml  build.gradle.kts  frontend_files.txt  gradle.properties  gradlew  gradlew.bat  gui_files.txt  index.html  justfile  local.properties  main.py  manage.py  mkdocs.yml  objects.inv  package-lock.json  package.json  pixi.toml  (+6 more)
app/src/core/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  FileSystemUtil.cpp  FileSystemUtil.h  ImageDatabase.py  ImageUtil.cpp  ImageUtil.h  JavaVaultManager.py  VaultManager.cpp  VaultManager.h  WallpaperManager.h  __init__.py  file_system_entries.py  format_converter.py  java_vault_manager.py  wallpaper.py
app/test/: ArgParserTest.cpp  CMakeLists.txt  DatabaseManagerTest.cpp  FileSystemUtilTest.cpp  GoogleDriveSyncTest.cpp  ImageUtilTest.cpp  VaultManagerTest.cpp  WallpaperManagerTest.cpp  WebClientTest.cpp  conftest.py  test_arg_parser.py  test_definitions.py  test_file_system_entries.py  test_format_converter.py  test_image_merger.py  test_java_vault_manager.py
backend/: AGENTS.md  CMakeLists.txt  dispatcher.py
backend/benchmark/: BENCHMARK_GUIDE.md  __init__.py  bench_anime_stitch.py  bench_cpp_image_processing.py  bench_database.py  bench_models.py  bench_rust_image_processing.py  bench_thumbnails.py  run_all.py  tracker_manager.py  utils.py
backend/config/: api_keys.yaml.example  asp_config.toml  base.yaml
backend/config/comfyui/: default.yaml
backend/config/core/: listings.yaml  merge.yaml  stitch.yaml  vault.yaml  wallpaper.yaml
backend/config/data/: embed_metadata.yaml
backend/config/inference/: sdxl_comfyui.yaml
backend/config/model/: animagine_xl.yaml  illustrious_xl.yaml  noobai_vpred.yaml
backend/config/training/: dreambooth.yaml  lora_3090ti.yaml  lora_4080.yaml  lycoris_locon.yaml
backend/migrations/: __init__.py  apply_migration.py  backup_all.py  create_library_db.py  migrate_listings.py  migrate_pgvector.py  psycopg_migration.py  runner.py  sync_listing_associations.py  verify_migration.py
backend/scripts/: apply_migration.py  check_import_times.py  check_links.py  lora_analyze.py  lora_setup_tagger.py  manage_webdriver.py  validate_images.py
backend/scripts/github/: agent_tools.py  sync_backlog.py
backend/src/: __init__.py  app.py  exceptions.py
backend/src/anim/: __init__.py  anim_fill.py  animeinterp_flow.py  bg_complete.py  bundle_adjust.py  cam_flow.py  canvas.py  compositing.py  config.py  constants.py  data_serialization.py  ecc.py  fg_register.py  flow_refine.py  frame_selection.py  grounding.py  masking.py  matching.py  mllm_scorer.py  param_search.py  photometric.py  pipeline.py  rendering.py  sr_stitcher.py  stateless.py  super_res.py  validation.py  video_ingestion.py
backend/src/animation/: __init__.py  anim_fill.py  animeinterp_flow.py  canvas.py  compositing.py  config.py  fg_register.py  flow_refine.py  frame_selection.py  masking.py  matching.py  param_search.py  pipeline.py  rendering.py  validation.py  video_ingestion.py
backend/src/constants/: __init__.py  anim.py  animation.py  app.py  cloud.py  crawler.py  crypto.py  database.py  imaging.py  paths.py  system.py
backend/src/controller/: dispatcher.py
backend/src/core/: CMakeLists.txt  Common.h  DatabaseManager.cpp  FileSystemEntries.py  FileSystemTool.cpp  FileSystemTool.hpp  ImageDatabase.cpp  ImageDatabase.hpp  ImageFinder.cpp  ImageFinder.hpp  ImageFormatConverter.cpp  ImageFormatConverter.hpp  ImageMerger.cpp  ImageMerger.h  ImageMerger.hpp  ImageUtil.h  VaultManager.cpp  VaultManager.h  VaultManager.hpp  WallpaperManager.cpp  WallpaperManager.hpp  __init__.py  anime_stitch_pipeline.py  cbir_search.py  dir_phash_index.py  duplicate_finder.py  file_system_entries.py  format_converter.py  image_converter.py  image_database.py  image_finder.py  image_merger.py  java_vault_manager.py  phash_deduplicator.py  similarity_finder.py  vault_manager.py  video_converter.py  video_probe.py  wallpaper.py
backend/src/database/: __init__.py  image_database.py  pooled_image_database.py  qdrant_manager.py  sql_loader.py
backend/src/errors/: __init__.py  exceptions.py
backend/src/gui/: MainWindow.py
backend/src/models/: CMakeLists.txt  SiameseModelLoader.cpp  SiameseModelLoader.hpp  __init__.py  aliked_lg_wrapper.py  basic_wrapper.py  birefnet_wrapper.py  comfy_manager.py  gan.py  (+20 more)
backend/test/: ArgParserTest.cpp  BaseTestFixture.h  DatabaseManagerTest.cpp  GoogleDriveSyncTest.cpp  TestImageFormatConverter.cpp  TestImageMerger.cpp  __init__.py  conftest.py  test_arg_parser.py  test_definitions.py  test_extraction_history.py  test_file_system_entries.py  test_format_converter.py  test_image_converter.py  test_image_database.py  test_image_finder.py  test_image_merger.py  test_image_merger_ml.py  test_java_vault_manager.py  test_models.py  test_suite.py  test_video_converter.py  test_wallpaper.py  test_web_crawler.py
backend/ui/: README.md  benchmark_dashboard.py
base/: AGENTS.md  CMakeLists.txt  Cargo.toml
base/benchmarks/: CMakeLists.txt  bench_core.cpp  bench_finder.cpp  bench_image.cpp  bench_math.cpp  core_operations.rs
base/include/: image_utils.hpp
base/src/: bindings.cpp  lib.rs
base/tests/: CMakeLists.txt  integration_tests.rs  utils_integration_tests.rs  web_integration_tests.rs
batch/: CMakeLists.txt
batch/src/: bindings.cpp  bundle_adjust.cpp  canvas.cpp  compositing.cpp  exposure.cpp  fg_register.cpp  frame_selection.cpp  matching.cpp  seam.cpp  sr_classical.cpp  validation.cpp  wave_correct.cpp
batch/tests/: CMakeLists.txt  test_bundle_adjust.cpp  test_compositing.cpp  test_exposure.cpp  test_matching.cpp  test_seam.cpp  test_validation.cpp  test_wave_correct.cpp
frontend/src-tauri/: .env.example  Cargo.toml  tauri.conf.json
(+2007 files in other folders)
