[project]
name = "Image-Toolkit"
version = "0.1.0"
description = "Image database and edit toolkit"
readme = "README.md"
requires-python = ">=3.11"

# All your runtime deps
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google>=3.0.0",
    "google-api-python-client>=2.187.0",
    "jpype1>=1.6.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pyside6>=6.10.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]

# (Optional) entry-point so you can run `image-toolkit` from terminal
[project.scripts]
# The entry point is now 'app.py' (found in 'app/src')
image-toolkit = "app:launch_app"

# Corrected 'dev' dependencies
[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "ruff>=0.14.3",
]

# BUILD CONFIG
[build-system]
requires = ["setuptools>=61", "wheel"]
build-src = "setuptools.build_meta"

# Tell setuptools EXACTLY what to package
[tool.setuptools.packages.find]
# 1. Tell setuptools to look INSIDE 'app' for packages
where = ["app/src"]

# 2. Include non-code files *inside* the packages
[tool.setuptools.package-data]
# "*" = ["*.ui", "*.qrc", "*.png", "*.ico"]

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*", "*_test"]
testpaths = "app/test"