[project]
name = "Image-Toolkit"
version = "0.1.0"
description = "Image database and edit toolkit"
readme = "README.md"
requires-python = ">=3.11"

# All your runtime deps
dependencies = [
    "accelerate>=1.12.0",
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "av>=17.0.1",
    "blake3>=1.0.8",
    "celery>=5.6.0",
    "cffi>=2.0.0",
    "comfy-aimdo>=0.3.0",
    "comfy-kitchen>=0.2.8",
    "comfyui-embedded-docs>=0.4.4",
    "comfyui-frontend-package>=1.43.1",
    "comfyui-workflow-templates>=0.9.66",
    "comtypes>=1.4.13",
    "diffusers>=0.35.2",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "dropbox>=12.0.2",
    "einops>=0.8.2",
    "filelock>=3.20.0",
    "glfw>=2.10.0",
    "google>=3.0.0",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "hydra-core>=1.3.2",
    "imagehash>=4.3.2",
    "jpype1>=1.6.0",
    "kornia>=0.8.2",
    "maturin>=1.10.2",
    "moviepy>=1.0.3",
    "msal>=1.34.0",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.25.1",
    "opencv-python-headless>=4.11.0.86",
    "peft>=0.18.0",
    "pillow>=12.0.0",
    "pip>=25.3",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyopengl>=3.1.10",
    "pyside6>=6.10.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "scenedetect>=0.6.7.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "screeninfo>=0.8.1",
    "selenium>=4.38.0",
    "sentencepiece>=0.2.1",
    "simpleeval>=1.0.7",
    "spandrel>=0.4.2",
    "sqlalchemy>=2.0.49",
    "timm>=1.0.26",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "torchaudio<2.10.0",
    "torchsde>=0.2.6",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.2",
    "webdriver-manager>=4.0.2",
    "yarl>=1.23.0",
]

# (Optional) entry-point so you can run `image-toolkit` from terminal
[project.scripts]
# The entry point is now 'app.py' (found in 'backend/src')
image-toolkit = "app:launch_app"

# Corrected 'dev' dependencies
[dependency-groups]
benchmark = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "streamlit>=1.54.0",
]
dev = [
    "black>=25.9.0",
    "cryptography>=46.0.3",
    "mypy>=1.18.2",
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

# BUILD CONFIG
[build-system]
requires = ["setuptools>=61", "wheel", "maturin>=1.0,<2.0", "cffi"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "base/Cargo.toml"

[tool.uv]
# This tells uv to rebuild the Rust code if any .rs files change
cache-keys = [{ file = "base/Cargo.toml" }, { file = "base/src/**/*.rs" }]

# Tell setuptools EXACTLY what to package
[tool.setuptools.packages.find]
# 1. Tell setuptools to look INSIDE 'backend' for packages
where = ["backend"]

# 2. Include non-code files *inside* the packages
[tool.setuptools.package-data]
# "*" = ["*.ui", "*.qrc", "*.png", "*.ico"]

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*", "*_test"]
testpaths = "backend/test"
