[package]
name = "base"
version = "0.1.0"
edition = "2021"

[lib]
name = "base"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "slideshow_daemon"
path = "src/utils/slideshow_daemon.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py311"] }
image = "0.25"
fast_image_resize = "5.1"
rayon = "1.10"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
directories = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
thirtyfour = "0.31"
tokio = { version = "1", features = ["full"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
tempfile = "3"
